Updates for settings, messages, version number

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -183,5 +183,6 @@
   "help_report_history": "Work Report History",
   "help_tech_settings": "User Profile",
   "help_messages": "Messages",
-  "help_settings": "Settings"
+  "help_settings": "Settings",
+  "weeks_to_show": "Weeks"
 }
