--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -185,5 +185,7 @@
   "help_messages": "Mensajes",
   "help_settings": "Ajustes",
   "weeks_to_show": "Semanas",
-  "startup_error": "Error durante el inicio de la aplicación:<br>\n<br>\n%s<br>\n<br>\n¿Intente reiniciar la aplicación?"
+  "startup_error": "Error durante el inicio de la aplicación:<br>\n<br>\n%s<br>\n<br>\n¿Intente reiniciar la aplicación?",
+  "english": "Inglés",
+  "spanish": "Español"
 }
