minor updates ... contemplating work reports n sich

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -140,7 +140,7 @@
   "key_training": "Training",
   "key_travel": "Travel",
   "key_training_and_travel": "Training and Travel",
-  "key_standby_duncan": "Standby for Duncan",
+  "key_standby_duncan": "Standby",
   "key_sick_day_or_hours": "Sick Day/Hrs",
   "key_holiday": "Holiday",
   "twenty_rules": "Twenty Rules",
