--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -140,7 +140,7 @@
   "key_training": "Formación",
   "key_travel": "Viajar",
   "key_training_and_travel": "Entrenamiento y Viajes",
-  "key_standby_duncan": "Espera por Duncan",
+  "key_standby_duncan": "Tiempo de espera",
   "key_sick_day_or_hours": "Día/Horas de Enfermedad",
   "key_holiday": "Vacación Pagada",
   "twenty_rules": "Veinte Reglas",
