Standby and other updates
Etc

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -103,7 +103,7 @@
   "training": "Training",
   "travel": "Travel",
   "standby": "Standby",
-  "standby_hb_duncan": "Standby: HB Duncan",
+  "standby_hb_duncan": "Standby",
   "sick": "Sick",
   "vacation": "Vacation",
   "holiday": "Holiday",
@@ -130,7 +130,7 @@
   "spinner_app_loading": "App Loading...",
   "all_day": "All Day",
   "standby_hours": "Standby Hrs.",
-  "standby_hb_duncan_hours": "Standby: HB Duncan Hrs.",
+  "standby_hb_duncan_hours": "Standby Hrs.",
   "sick_hours": "Sick Hrs.",
   "vacation_hours": "Vacation Hrs.",
   "holiday_hours": "Holiday Hrs.",
@@ -140,13 +140,14 @@
   "key_training": "Training",
   "key_travel": "Travel",
   "key_training_and_travel": "Training and Travel",
-  "key_standby_duncan": "Standby for Duncan",
+  "key_standby": "Standby",
+  "key_standby_duncan": "Standby",
   "key_sick_day_or_hours": "Sick Day/Hrs",
   "key_holiday": "Holiday",
   "twenty_rules": "Twenty Rules",
   "warning": "Warning",
-  "hb_unit_number_length": "Halliburton unit numbers are usually 8 digits, but you have %d digits. Do you need to fix it?",
-  "hb_work_order_number_length": "Halliburton work order numbers are usually 9 digits, but you have %d digits. Do you need to fix it?",
+  "hb_unit_number_length": "Halliburton unit numbers are usually 8 digits, but you have %d digits. Continue?",
+  "hb_work_order_number_length": "Halliburton work order numbers are usually 9 digits, but you have %d digits. Continue?",
   "yes": "Yes",
   "no": "No",
   "ok": "OK",
