--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -103,7 +103,7 @@
   "training": "Formación",
   "travel": "Viajar",
   "standby": "Espera",
-  "standby_hb_duncan": "Espera: HB Duncan",
+  "standby_hb_duncan": "Espera",
   "sick": "Enfermos",
   "vacation": "Vacaciones",
   "holiday": "Vacación Pagada",
@@ -130,7 +130,7 @@
   "spinner_app_loading": "Cargando la Aplicación",
   "all_day": "Todo el Dia",
   "standby_hours": "Horas de Espera",
-  "standby_hb_duncan_hours": "Horas de Espera: HB Duncan",
+  "standby_hb_duncan_hours": "Horas de Espera",
   "sick_hours": "Horas de Enfermedad",
   "vacation_hours": "Horas de Vacaciones",
   "holiday_hours": "Horas de Vacacion Pagada",
@@ -140,13 +140,13 @@
   "key_training": "Formación",
   "key_travel": "Viajar",
   "key_training_and_travel": "Entrenamiento y Viajes",
-  "key_standby_duncan": "Espera por Duncan",
+  "key_standby_duncan": "Espera",
   "key_sick_day_or_hours": "Día/Horas de Enfermedad",
   "key_holiday": "Vacación Pagada",
   "twenty_rules": "Veinte Reglas",
   "warning": "Alerta",
-  "hb_unit_number_length": "Los números de las unidades de Halliburton suelen ser 8 dígitos, pero tiene %d dígitos. ¿Necesitas arreglarlo?",
-  "hb_work_order_number_length": "Los números de orden de trabajo de Halliburton suelen ser de 9 dígitos, pero tiene %d dígitos. ¿Necesitas arreglarlo?",
+  "hb_unit_number_length": "Los números de las unidades de Halliburton suelen ser 8 dígitos, pero tiene %d dígitos. ¿Continuar?",
+  "hb_work_order_number_length": "Los números de orden de trabajo de Halliburton suelen ser de 9 dígitos, pero tiene %d dígitos. ¿Continuar?",
   "yes": "Sí",
   "no": "No",
   "ok": "De Acuerdo",
