Geolocation and ionic/cordova update
Not finished, but pretty cool. Also had to update a lot of stuff to make it compatible with TypeScript/Ionic/Cordova/Angular updates.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -100,7 +100,7 @@
   "error_saving_report_message": "Error saving work report. Please try again later.",
   "report_type": "Tipo de Reporte",
   "work_report": "Reporte de trabajo",
-  "training": "Formación",
+  "training": "Entrenamiento",
   "travel": "Viajar",
   "standby": "Espera",
   "standby_hb_duncan": "Espera",
@@ -108,7 +108,7 @@
   "vacation": "Vacaciones",
   "holiday": "Vacación Pagada",
   "travel_hours": "Horas de Viaje",
-  "training_hours": "Horas de Formación",
+  "training_hours": "Horas de Entrenamiento",
   "safety": "Seguridad",
   "pec": "PEC",
   "forklift": "Máquina Elevadora",
@@ -137,7 +137,7 @@
   "app_settings": "Ajustes de Aplicacion",
   "sounds": "Sonidos",
   "attempt_to_change_existing_report_type": "No se puede cambiar el tipo de un reporte existente. Elimine este reporte y cree un nuevo reporte.",
-  "key_training": "Formación",
+  "key_training": "Entrenamiento",
   "key_travel": "Viajar",
   "key_training_and_travel": "Entrenamiento y Viajes",
   "key_standby_duncan": "Espera",
